==> apache/nuttx/arch/risc-v/src/gd32vw55x/gd32vw55x_pwm.c <==
#include <nuttx/config.h>
#include <stdint.h>
#include <stdbool.h>
#include <inttypes.h>
#include <errno.h>
#include <debug.h>
#include <nuttx/irq.h>
#include <nuttx/arch.h>
#include <nuttx/timers/pwm.h>
#include <arch/board/board.h>
#include "riscv_internal.h"
#include "chip.h"
#include "gd32vw55x_clockconfig.h"
#include "gd32vw55x_gpio.h"
#include "gd32vw55x_pwm.h"
#include "hardware/gd32vw55x_rcu.h"
#include "hardware/gd32vw55x_timer.h"
#define GD32_APB1_TIMER_CLKIN  (GD32VW55X_PCLK1_FREQ * 2)
#define GD32_APB2_TIMER_CLKIN  (GD32VW55X_PCLK2_FREQ)
#define GD32_PWM_CHAN_MAX      4
#  define GPIO_TIMER0_CH0OUT   0
#  define GPIO_TIMER0_CH1OUT   0
#  define GPIO_TIMER0_CH2OUT   0
#  define GPIO_TIMER0_CH3OUT   0
#  define GPIO_TIMER0_CH0NOUT  0
#  define GPIO_TIMER0_CH1NOUT  0
#  define GPIO_TIMER0_CH2NOUT  0
#  define GPIO_TIMER1_CH0OUT   0
#  define GPIO_TIMER1_CH1OUT   0
#  define GPIO_TIMER1_CH2OUT   0
#  define GPIO_TIMER1_CH3OUT   0
#  define GPIO_TIMER2_CH0OUT   0
#  define GPIO_TIMER2_CH1OUT   0
#  define GPIO_TIMER2_CH2OUT   0
#  define GPIO_TIMER2_CH3OUT   0
#  define GPIO_TIMER15_CH0OUT  0
#  define GPIO_TIMER15_CH0NOUT 0
#  define GPIO_TIMER16_CH0OUT  0
#  define GPIO_TIMER16_CH0NOUT 0

static int pwm_timer(struct gd32_pwmtimer_s *priv,
                     const struct pwm_info_s *info)
{
  uint32_t prescaler;
  uint32_t timclk;
  uint32_t reload;
  uint64_t period;
  uint64_t carmax;
  uint32_t chctl0;
  uint32_t chctl1;
  uint32_t chctl2;
  uint32_t ctl0;
  int      i;
  int      j;

  if (info->frequency == 0)
    {
      return -EINVAL;
    }

  carmax = priv->timer32 ? (uint64_t)TIMER_CAR_MAX32 :
                           (uint64_t)TIMER_CAR_MAX16;

  /* Select the smallest prescaler that brings the period within the range
   * of the counter:
   *
   *   reload = pclk / (prescaler * frequency) - 1 <= carmax
   */

  prescaler = (uint32_t)(((uint64_t)priv->pclk / info->frequency + carmax) /
                         (carmax + 1));
  if (prescaler < 1)
    {
      prescaler = 1;
    }
  else if (prescaler > TIMER_PSC_MAX + 1)
    {
      prescaler = TIMER_PSC_MAX + 1;
    }

  timclk = priv->pclk / prescaler;

  /* Number of timer ticks of one period of the pulse train */

  period = (uint64_t)timclk / info->frequency;
  if (period < 1)
    {
      period = 1;
    }
  else if (period > carmax + 1)
    {
      period = carmax + 1;
    }

  reload = (uint32_t)(period - 1);

  pwminfo("TIMER%d frequency: %" PRIu32 " prescaler: %" PRIu32
          " reload: %" PRIu32 "\n",
          priv->timid, info->frequency, prescaler, reload);

  /* Stop the timer while it is being reconfigured */

  pwm_modifyreg(priv, GD32VW55X_TIMER_CTL0_OFFSET, TIMER_CTL0_CEN, 0);

  /* Edge aligned, up counting, auto-reload preloaded */

  ctl0  = pwm_getreg(priv, GD32VW55X_TIMER_CTL0_OFFSET);
  ctl0 &= ~(TIMER_CTL0_DIR | TIMER_CTL0_CAM_MASK | TIMER_CTL0_CKDIV_MASK |
            TIMER_CTL0_SPM);
  ctl0 |= TIMER_CTL0_CAM_EDGE | TIMER_CTL0_CKDIV_DIV1 | TIMER_CTL0_ARSE;
  pwm_putreg(priv, GD32VW55X_TIMER_CTL0_OFFSET, ctl0);

  pwm_putreg(priv, GD32VW55X_TIMER_PSC_OFFSET, prescaler - 1);
  pwm_putreg(priv, GD32VW55X_TIMER_CAR_OFFSET, reload);

  /* No repetition on the timers that have a repetition counter */

  if (priv->advanced)
    {
      pwm_putreg(priv, GD32VW55X_TIMER_CREP_OFFSET, 0);
    }

  chctl0 = pwm_getreg(priv, GD32VW55X_TIMER_CHCTL0_OFFSET);
  chctl1 = pwm_getreg(priv, GD32VW55X_TIMER_CHCTL1_OFFSET);
  chctl2 = pwm_getreg(priv, GD32VW55X_TIMER_CHCTL2_OFFSET);

  /* Configure the requested channels */

  for (i = 0; i < CONFIG_PWM_NCHANNELS; i++)
    {
      struct gd32_pwmchan_s *chan = NULL;
      uint32_t chctl;
      uint32_t ccr;
      ub16_t   duty;
      int8_t   channel;
      int      index;

      duty = info->channels[i].duty;

#ifdef CONFIG_PWM_MULTICHAN
      channel = info->channels[i].channel;

      /* A channel number of zero or less terminates the list */

      if (channel <= 0)
        {
          continue;
        }
#else
      /* Without multi-channel support only the first channel of the timer
       * is driven.
       */

      channel = priv->channels[0].channel + 1;
#endif

      /* The upper half numbers the channels from 1 */

      for (j = 0; j < priv->nchannels; j++)
        {
          if (priv->channels[j].channel == (uint8_t)(channel - 1))
            {
              chan = &priv->channels[j];
              break;
            }
        }

      if (chan == NULL)
        {
          pwmerr("ERROR: TIMER%u has no channel %d\n",
                 priv->timid, channel);
          return -EINVAL;
        }

      index = chan->channel;

      /* Duty cycle:
       *
       *   ccr / (reload + 1) = duty / 65536
       */

      ccr = (uint32_t)((((uint64_t)reload + 1) * (uint64_t)duty) >> 16);
      if ((uint64_t)ccr > (uint64_t)reload + 1)
        {
          ccr = reload;
        }

      /* PWM mode 0 with an output compare shadow register */

      chctl = TIMER_CHCTL_CHMS_OUTPUT | TIMER_CHCTL_CHCOMCTL_PWM0 |
              TIMER_CHCTL_CHCOMSEN;

      if (index < 2)
        {
          chctl0 &= ~TIMER_CHCTL_MASK(index);
          chctl0 |= chctl << TIMER_CHCTL_SHIFT(index);
        }
      else
        {
          chctl1 &= ~TIMER_CHCTL_MASK(index);
          chctl1 |= chctl << TIMER_CHCTL_SHIFT(index);
        }

      /* Output polarity and output enable */

      chctl2 &= ~TIMER_CHCTL2_MASK(index);
      chctl2 |= TIMER_CHCTL2_CHEN(index);

#ifdef CONFIG_PWM_MULTICHAN
      if (info->channels[i].cpol == PWM_CPOL_LOW)
        {
          chctl2 |= TIMER_CHCTL2_CHP(index);
        }
#endif

      /* Enable the complementary output when the board routes it */

      if (chan->npincfg != 0)
        {
          chctl2 |= TIMER_CHCTL2_CHNEN(index);
        }

      pwm_putreg(priv, GD32VW55X_TIMER_CHCV_OFFSET(index), ccr);
    }

  pwm_putreg(priv, GD32VW55X_TIMER_CHCTL0_OFFSET, chctl0);
  pwm_putreg(priv, GD32VW55X_TIMER_CHCTL1_OFFSET, chctl1);
  pwm_putreg(priv, GD32VW55X_TIMER_CHCTL2_OFFSET, chctl2);

#ifdef CONFIG_PWM_DEADTIME
  /* The dead time is common to every complementary output of the timer.
   * Only the advanced timers have the CCHP register.  The value is given
   * in dead-time clock ticks (fDTS = the timer clock here).
   */

  if (priv->advanced)
    {
      uint32_t dtcfg = ub16toi(info->channels[0].dead_time_a);

      if (dtcfg > TIMER_CCHP_DTCFG_MASK)
        {
          dtcfg = TIMER_CCHP_DTCFG_MASK;
        }

      pwm_modifyreg(priv, GD32VW55X_TIMER_CCHP_OFFSET,
                    TIMER_CCHP_DTCFG_MASK, dtcfg);
    }
#endif

  /* Enable the primary output of the advanced timers */

  if (priv->advanced)
    {
      pwm_modifyreg(priv, GD32VW55X_TIMER_CCHP_OFFSET, 0, TIMER_CCHP_POEN);
    }

  /* Generate an update event to load the shadow registers, then start the
   * counter.
   */

  pwm_putreg(priv, GD32VW55X_TIMER_SWEVG_OFFSET, TIMER_SWEVG_UPG);
  pwm_modifyreg(priv, GD32VW55X_TIMER_CTL0_OFFSET, 0, TIMER_CTL0_CEN);

  return OK;
}

static int pwm_setup(struct pwm_lowerhalf_s *dev)
{
  struct gd32_pwmtimer_s *priv = (struct gd32_pwmtimer_s *)dev;
  int i;

  /* Enable the timer clock */

  pwm_setclock(priv, true);

  /* Configure the output pins that the board routes */

  for (i = 0; i < priv->nchannels; i++)
    {
      if (priv->channels[i].pincfg != 0)
        {
          gd32_gpio_config(priv->channels[i].pincfg);
        }

      if (priv->channels[i].npincfg != 0)
        {
          gd32_gpio_config(priv->channels[i].npincfg);
        }
    }

  return OK;
}

static int pwm_shutdown(struct pwm_lowerhalf_s *dev)
{
  struct gd32_pwmtimer_s *priv = (struct gd32_pwmtimer_s *)dev;

  /* Make sure that the outputs are inactive */

  pwm_stop(dev);

  /* Turn the timer clock off */

  pwm_setclock(priv, false);

  return OK;
}

static int pwm_stop(struct pwm_lowerhalf_s *dev)
{
  struct gd32_pwmtimer_s *priv = (struct gd32_pwmtimer_s *)dev;
  irqstate_t flags;

  flags = enter_critical_section();

  pwm_disable_outputs(priv);

  /* Reset the channel configuration and the time base */

  pwm_putreg(priv, GD32VW55X_TIMER_CHCTL0_OFFSET, 0);
  pwm_putreg(priv, GD32VW55X_TIMER_CHCTL1_OFFSET, 0);
  pwm_putreg(priv, GD32VW55X_TIMER_DMAINTEN_OFFSET, 0);
  pwm_putreg(priv, GD32VW55X_TIMER_INTF_OFFSET, 0);
  pwm_putreg(priv, GD32VW55X_TIMER_CNT_OFFSET, 0);

  leave_critical_section(flags);

  return OK;
}

struct pwm_lowerhalf_s *gd32_pwminitialize(int timer)
{
  struct gd32_pwmtimer_s *lower;

  pwminfo("TIMER%d\n", timer);

  switch (timer)
    {
#ifdef CONFIG_GD32VW55X_TIMER0
      case 0:
        lower = &g_pwm0;
        break;
#endif

#ifdef CONFIG_GD32VW55X_TIMER1
      case 1:
        lower = &g_pwm1;
        break;
#endif

#ifdef CONFIG_GD32VW55X_TIMER2
      case 2:
        lower = &g_pwm2;
        break;
#endif

#ifdef CONFIG_GD32VW55X_TIMER15
      case 15:
        lower = &g_pwm15;
        break;
#endif

#ifdef CONFIG_GD32VW55X_TIMER16
      case 16:
        lower = &g_pwm16;
        break;
#endif

      /* TIMER5 is a basic timer without any output channel */

      default:
        pwmerr("ERROR: No such timer configured: %d\n", timer);
        return NULL;
    }

  return (struct pwm_lowerhalf_s *)lower;
}
